--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
+<html lang="pt-BR>
+<head>
+  <link real="stylesheet" href="styles.css"
+  <title>Aluraflix</title>
+</head>
+
+<body>
 <header>ALURAFLIX</header>x
 
+<section>
 <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
 <p>#homem-aranha</p>
